# tap-rawmysql

./: .gitignore  LICENSE  meltano.yml  pyproject.toml
tap_rawmysql/: __init__.py  client.py  tap.py
tests/: __init__.py  test_core.py
tests/configs/: config.json.sample  meltano_tap_rawmysql_dump.sql  streams.py
